--- a/backend/templates/blog.html
+++ b/backend/templates/blog.html
@@ -10,11 +10,18 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/uikit@3.7.3/dist/css/uikit.min.css"
     />
-
+    <script
+      src="https://kit.fontawesome.com/c7cbb7fafb.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- UIkit JS -->
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.3/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.3/dist/js/uikit-icons.min.js"></script>
-    <style></style>
+    <style>
+      .fas {
+        color: red;
+      }
+    </style>
   </head>
   <body>
     <nav class="uk-navbar-container" uk-navbar>
@@ -24,17 +31,18 @@
           <li class="uk-active">
             <a href="/blog">Blogs</a>
           </li>
-          <li><a href="#">Messages</a></li>
+          <li><a href="/chat">Messages</a></li>
         </ul>
       </div>
       <div class="uk-navbar-right" style="margin-right: 70px">
         <ul class="uk-navbar-nav">
           <li>
             {% if user.is_authenticated %}
-            <a href="/dashboard"">{{ user.first_name }}</a>
+            <a href="/dashboard">{{ user.first_name }}</a>
             {% endif %}
             <div class="uk-navbar-dropdown">
               <ul class="uk-nav uk-navbar-dropdown-nav">
+                <li><a href="/new-blog">Write a blog</a></li>
                 <li><a href="/myblogs">My Blogs</a></li>
                 <li><a href="/dashboard">Account</a></li>
                 <li><a href="/logout">Logout</a></li>
@@ -56,13 +64,11 @@
           margin-bottom: 50px;
         "
       >
-      {% if my %}
-      <h1>My Blogs</h1>
-      {% endif %}
-      {% if usr %}
-      <h1>Blogs of {{ usr.name }}</h1>
-      {% endif %}
-        {% for i in datas %}
+        {% if my %}
+        <h1>My Blogs</h1>
+        {% endif %} {% if usr %}
+        <h1>Blogs of {{ usr.name }}</h1>
+        {% endif %} {% for i in datas %}
 
         <div
           class="uk-card uk-card-default uk-card-large uk-card-body"
@@ -86,7 +92,7 @@
           <span
             >By-
             <a href="/user/{{ i.name.username }}" style="margin-left: 10px"
-              >{{ i.name }}</a
+              >{{ i.name.first_name }}</a
             ></span
           >
           <span>On- {{ i.date }}</span>
@@ -94,8 +100,14 @@
             class="uk-divider-icon"
             style="background-color: black; color: black"
           />
+          {% autoescape on %}
           <p>{{ i.description }}</p>
-          <button uk-icon="heart" onclick="like('{{ i.id }}')">
+          {% endautoescape %}
+          <button
+            class="far fa-heart"
+            id="likess{{ i.id }}"
+            onclick="like('{{ i.id }}')"
+          >
             <span style="margin-right: 4px" id="likes{{ i.id }}"
               >{{ i.likes }}</span
             >
@@ -124,7 +136,8 @@
           success: function (data) {
             var tag = "likes" + id;
             var txt = $("#" + tag).html();
-            $('.uk-icon[uk-icon="heart"] svg path').css({ fill: "#ff0000" });
+            $("#likess" + id).removeClass("far");
+            $("#likess" + id).addClass("fas");
             $("#likes" + id).text(eval(txt + "+1"));
           },
         }).done((json) => console.log(json));
