--- a/backend/templates/new_blog.html
+++ b/backend/templates/new_blog.html
@@ -27,22 +27,24 @@
       <div class="uk-navbar-left">
         <ul class="uk-navbar-nav">
           <li class="uk-active"><a href="#">NoDistance</a></li>
-          <li>
-            <a href="#">Blogs</a>
+          <li class="uk-active">
+            <a href="/blog">Blogs</a>
           </li>
-          <li><a href="#">Messages</a></li>
+          <li><a href="/chat">Messages</a></li>
         </ul>
       </div>
       <div class="uk-navbar-right" style="margin-right: 70px">
         <ul class="uk-navbar-nav">
           <li>
             {% if user.is_authenticated %}
-            <a href="#">{{ name }}</a>
+            <a href="/dashboard">{{ name }}</a>
             {% endif %}
             <div class="uk-navbar-dropdown">
               <ul class="uk-nav uk-navbar-dropdown-nav">
-                <li class="uk-active"><a href="#">Account</a></li>
-                <li><a href="#">Logout</a></li>
+                <li><a href="/new-blog">Write a blog</a></li>
+                <li><a href="/myblogs">My Blogs</a></li>
+                <li><a href="/dashboard">Account</a></li>
+                <li><a href="/logout">Logout</a></li>
               </ul>
             </div>
           </li>
